--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -73,5 +73,9 @@
     {{- .Scratch.Set "Author" .Params.Author -}}
   {{- else -}}
     {{- .Scratch.Set "Author" .Author -}}
-  {{ end }}
+  {{- end -}}
+  {{- if .Site.Params.katex -}}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css"
+      integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
+  {{- end -}}
 </head>
