Hack: temporary See Also implementation

--- a/layouts/partials/site-sidebar.html
+++ b/layouts/partials/site-sidebar.html
@@ -40,6 +40,15 @@
     {{ end }}
   {{ end }}
 
+      <section id="see-also">
+	  <header>
+	      <h1>老大哥推荐阅读</h1>
+	  </header>
+	  <ul>
+	      <li><a href="https://blog.konata.co" >此方方有限公司</a></li>
+	  </ul>
+      </section>
+
   {{ if .Site.Params.sidebar.about }}
     <section id="mini-bio">
       <header>
@@ -51,4 +60,5 @@
       </footer>
     </section>
   {{ end }}
+
 </section>
